--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
 	"python.linting.pylintEnabled": true,
 	"python.linting.enabled": true,
-	"python.testing.pytestArgs": ["."],
+	"python.testing.pytestArgs": [
+		"."
+	],
 	"python.testing.unittestEnabled": false,
 	"python.testing.pytestEnabled": true,
 	"python.analysis.typeCheckingMode": "basic",
-	"python.formatting.provider": "black",
+	"python.formatting.provider": "none",
 	"python.languageServer": "Pylance",
-	"rust-analyzer.linkedProjects": ["./manager/Cargo.toml"]
+	"rust-analyzer.linkedProjects": [
+		"./manager/Cargo.toml"
+	],
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.black-formatter"
+	}
 }
