--- a/.github/workflows/docker_build_main.yml
+++ b/.github/workflows/docker_build_main.yml
@@ -1,6 +1,7 @@
 name: Docker Build Main
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - "main"
@@ -22,4 +23,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: stax124/volta:latest
+          tags: zaks/vml:base
