--- a/.github/workflows/docker_build_main.yml
+++ b/.github/workflows/docker_build_main.yml
@@ -8,10 +8,8 @@ on:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:20.04
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
@@ -23,4 +21,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: zaks/vml:base
+          tags: zaks/vml:basessh
