add ignored paths

--- a/.github/workflows/docker_build_main.yml
+++ b/.github/workflows/docker_build_main.yml
@@ -3,6 +3,9 @@ name: Docker Build Main
 on:
   workflow_dispatch:
   push:
+    ignore-paths:
+      - ".github/workflows/docker_build_custom.yml"
+      - "dockerfile.ssh"
     branches:
       - "main"
 
