change property name

--- a/.github/workflows/docker_build_main custom.yml
+++ b/.github/workflows/docker_build_main custom.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           push: true
           tags: zaks/vml:base
-          dockerfile: dockerfile.ssh
+          file: dockerfile.ssh
