--- a/.github/workflows/docker_build_custom.yml
+++ b/.github/workflows/docker_build_custom.yml
@@ -14,6 +14,15 @@ jobs:
   docker:
     runs-on: ubuntu-20.04
     steps:
+      - name: Free Up GitHub Actions Ubuntu Runner Disk Space 🔧
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
